test/programs/good/typechecker/measr_6.lq
initQbit :: !(() -> Qbit)
initQbit _ = new @+ 

measrQbit :: !(Qbit -> Bit)
measrQbit q = measr q 

main :: !(() -> Bit)
main u = measrQbit  (initQbit u)

