test/programs/bad/typechecker/new_6.lq
initBit :: !(() -> Bit)
initBit _ = measr new

